Começando a página da imobiliária

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9544,11 +9544,31 @@ body {
   text-align: center;
 }
 
-.header {
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: reverse;
-      -ms-flex-direction: row-reverse;
-          flex-direction: row-reverse;
+@media screen and (max-width: 576px) {
+  .header {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+}
+
+@media screen and (min-width: 577px) and (max-width: 1023px) {
+  .header {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .header {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+  }
 }
 
 .header .titulo-nome {
@@ -9956,7 +9976,6 @@ li a.ribbons:hover {
 
 .impar {
   background-color: #f6f7fa;
-  padding: 20px 0 20px 0;
 }
 
 .projeto h1,
