--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -62,12 +62,13 @@ html, body {
   .titulo-nome{
     font-size: 4em;
     font-family: 'Libre Baskerville', serif;
-    margin: 0.3em 0 0 0;
+    margin: 1em 0 0 0;
   }
   .titulo-profissao{
     font-size: 1.2em;
     font-family: 'Libre Baskerville', serif;
-    margin: 1em 0 0 0;
+    display: inline-block;
+    margin: 0.6em 0 0 0;
     color: $gray-300;
     b{
       font-weight: 600;
@@ -78,13 +79,16 @@ html, body {
     }
   }
   .menu{
-    margin-bottom: 1em;
+    @media screen and  (max-width:1023px){
+      margin-top: 1em;
+    }
     ul{
       margin: 0;
       padding: 0;
       display: flex;
       justify-content: space-between;
       white-space: nowrap;
+      
       li{
         font-family: 'Nunito', sans-serif;
         display: inline;
@@ -96,9 +100,10 @@ html, body {
 }
 .titulo-descricao{
   font-size: 14px;
-  font-weight: 400;
+  font-weight: 300;
   font-family: 'Libre Baskerville', serif;
-  margin: 1em 0 30px 0;
+  margin: 1.5em 1em 2em 1em;
+  text-align: center;
   line-height: 120%;
   color:$gray-800;
 }
@@ -136,11 +141,11 @@ html, body {
     margin-bottom: 1em;
   }
   @media screen and (min-width:577px) and (max-width:768px){
-    width: 45%; 
+    width: 100%; 
     margin-bottom: 1em;
   }
   @media screen and (min-width:769px){
-    width: 30%; 
+    width: 45%; 
     margin-bottom: 1.5em;
   }
 }
@@ -257,7 +262,6 @@ html, body {
   overflow:hidden;
   vertical-align:middle;
   border:1px solid transparent;
-  transition:all 0.5s ease-in-out;
 
   &::before, &::after {
     content:'';
@@ -399,6 +403,7 @@ li{
     font-family: "Nunito", sans-serif;
     font-weight: 600;
     color: rgb(62, 117, 255);
+    margin: 0 0 1em 0;
   }
   .projeto-titulo{
     h1{
@@ -433,9 +438,10 @@ li{
       }
     }
     .projeto-descricao{
-      h4{
+      h3{
         font-weight: 600;
         color: rgb(62, 117, 255);
+        margin: 0 0 0.6em 0;
       }
       font-family: "Nunito", sans-serif;
       margin: 0em 0 0 0;   
@@ -449,7 +455,8 @@ li{
     text-align: center;
     font-family: "Nunito", sans-serif;
     font-size: 18px;
-    padding: 1em 1.5em 0em 1.5em;
+    padding: 2em 1.5em 0em 1.5em;
+    line-height: 1.67;
     b{
       font-weight: 600;
     }
