--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -462,6 +462,7 @@ li{
     }
     .projeto-imagem, .projeto-imagem-esquerda{
       text-align: center;
+      margin-bottom:20px;
       img,.img-80{
         margin-top: 20px;
         max-width: 100%;
